--- a/OVAIRE/index.html
+++ b/OVAIRE/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1 class="title-animated">OVAIRE</h1>
-        <p class="subtitle">(observatorio de vigilancia aire escolar)</p>
+        <p class="subtitle">(OBSERVATORIO DE VIGILANCIA AIRE ESCOLAR)</p>
     </div>
     <div class="container">
         <div class="logo"><a href="https://www.instagram.com/ovaireveeduriaambiental/?igsh=MWs0ZGV2eWozZ3hkaw%3D%3D#">
