--- a/OVAIRE/index.html
+++ b/OVAIRE/index.html
@@ -9,23 +9,129 @@
 </head>
 
 <body>
+
     <div class="header">
-        <h1 class="title-animated">OVAIRE</h1>
-        <p class="subtitle">(OBSERVATORIO DE VIGILANCIA DEL AIRE ESCOLAR)</p>
-       
+        <img src="img/Logo.png" alt="Logo OVAIRE" class="logo-ovaire">
+        <div class="entidades-apoyo">
+            <h3 class="title-animated" style="font-size: 2em;">Apoyado por:</h3>
+            <ul class="lista-entidades">
+                <li>
+                    <img src="logos/logo-educapaz.png" alt="Logo EDUCAPAZ" class="logo-entidad">
+                    <span>EDUCAPAZ</span>
+                </li>
+                <li>
+                    <img src="logos/logo-alerta.png" alt="Logo AlertaPorMiambiente" class="logo-entidad">
+                    <span>#AlertaPorMiambiente</span>
+                </li>
+                <li>
+                    <img src="logos/logo-IEJCM.png" alt="Logo IEJCM" class="logo-entidad">
+                    <span>IEJCM</span>
+                </li>
+            </ul>
+        </div>
     </div>
+    <button class="desplazamiento"><a href="#descripcion">Saber mas</a></button>
     <div class="container">
         <div class="logo"><a href="https://www.instagram.com/ovaireveeduriaambiental/?igsh=MWs0ZGV2eWozZ3hkaw%3D%3D#">
                 <h1 class="title-animated">Instagram</h1>
             </a><img src="img/instagram.jpg" alt="QR de instagram"></div>
+
         <div class="logo"><a
                 href="https://web.facebook.com/people/Ovaire-Veedur%C3%ADa/pfbid031v4qRQ9nPnyDsAn6EwUaxx2NqFQHXsNwNWdtPkkCjHiDgfCQNsVkXtUcg2wU5gM4l/?rdid=40xi6MtcgWR2kZyK&share_url=https%3A%2F%2Fweb.facebook.com%2Fshare%2F1BYrx2azQq%2F%3F_rdc%3D1%26_rdr">
                 <h1 class="title-animated">Facebook</h1>
             </a><img src="img/Facebook.jpg" alt="QR de Facebook"></div>
+
         <div class="logo"><a href="https://www.tiktok.com/@ovaire304?_t=ZS-90YGvijTamm&_r=1">
                 <h1 class="title-animated">Tik Tok</h1>
             </a><img src="img/Tik Tok.jpg" alt="QR de Tik Tok"></div>
     </div>
+
+
+
+    <div class="descripcion" id="descripcion">
+        <div class="quienes-somos" id="quienes-somos">
+            <h2 class="title-animated">¿QUIENES SOMOS?</h2>
+            <p>Somos un grupo de estudiantes encargados de hacer seguimiento y observaciones a los malos olores,
+                especialmente por la problemática que se está presentando al frente de nuestro colegio</p>
+        </div>
+
+        <div class="que-hacemos">
+            <h2 class="title-animated">¿QUE HACEMOS?</h2>
+            <p>Nos hemos enfocado principalmente en realizar una investigación detallada de lo que estaba pasando al
+                frente de nuestra institución y por qué está se estaba demorando, con esta investigación nos dimos
+                cuenta de que la problemática era mucho más compleja de lo que pensábamos
+            </p>
+        </div>
+    </div>
+    <div class="Nuestro-proceso">
+        <h2 class="title-animated">RESUMEN DE NUESTRO PROCESO</h2>
+        <div class="proceso-img-container">
+            <div class="Encuestas">
+                <h3 class="carousel-title">Encuestas Realizadas</h3>
+                <div class="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-09-18 at 2.10.41 PM.jpeg"
+                                alt="Encuesta 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-09-26 at 12.00.08 PM (1).jpeg"
+                                alt="Encuesta 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-09-26 at 12.00.08 PM.jpeg"
+                                alt="Encuesta 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-09-26 at 12.04.40 PM.jpeg"
+                                alt="Encuesta 4">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-10-03 at 2.29.30 PM.jpeg"
+                                alt="Encuesta 5">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-10-04 at 5.07.08.0 PM.jpeg"
+                                alt="Encuesta 6">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img proceso/IMG Encuestas/WhatsApp Image 2025-10-03 at 2.50.08 PM.jpeg"
+                                alt="Encuesta 7">
+                        </div>
+                    </div>
+                    <button class="carousel-control prev">&#10094;</button>
+                    <button class="carousel-control next">&#10095;</button>
+                </div>
+            </div>
+            <div class="Problema">
+                <h3 class="carousel-title">Problemas detectados</h3>
+                <div class="carousel problema-carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <video src="img proceso/img-vid Problema/WhatsApp Video 2025-10-03 at 12.10.17 PM.mp4"
+                                controls></video>
+                        </div>
+                        <div class="carousel-item">
+                            <video src="img proceso/img-vid Problema/WhatsApp Video 2025-10-03 at 12.25.40 PM.mp4"
+                                controls></video>
+                        </div>
+                        <div class="carousel-item">
+                            <video
+                                src="img proceso/img-vid Problema/WhatsApp Video 2025-10-04 at 8.45.07 AM.mp4"></video>
+                        </div>
+                    </div>
+                    <button class="carousel-control prev">&#10094;</button>
+                    <button class="carousel-control next">&#10095;</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contacto" id="contacto">
+        <p>Correo: <a href="mailto:veeduriaambientalovaire@gmail.com">veeduriaambientalovaire@gmail.com</a></p>
+
+    </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
