--- a/OVAIRE/index.html
+++ b/OVAIRE/index.html
@@ -116,8 +116,8 @@
                                 controls></video>
                         </div>
                         <div class="carousel-item">
-                            <video
-                                src="img proceso/img-vid Problema/WhatsApp Video 2025-10-04 at 8.45.07 AM.mp4"></video>
+                            <video src="img proceso/img-vid Problema/WhatsApp Video 2025-10-04 at 8.45.07 AM.mp4"
+                                controls playsinline></video>
                         </div>
                     </div>
                     <button class="carousel-control prev">&#10094;</button>
@@ -128,6 +128,9 @@
     </div>
     <div class="contacto" id="contacto">
         <p>Correo: <a href="mailto:veeduriaambientalovaire@gmail.com">veeduriaambientalovaire@gmail.com</a></p>
+    </div>
+    <div class="credenciales">
+        <p>Desarrollado por: Kevin Stiven Urrego Rojas 1002</p>
     </div>
     <script src="script.js"></script>
 </body>
